# org-gh

./: .gitignore  2026-01-09-org-gh-sync-spec.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: howto-personal.md
docs/plans/: 2026-01-09-elisp-integration-design.md
elisp/: org-gh.el
src/: config.rs  error.rs  lib.rs  main.rs  output.rs
src/cli/: init.rs  mod.rs  pull.rs  push.rs  status.rs  sync.rs  unlink.rs
src/github/: client.rs  mod.rs  model.rs
src/org/: mod.rs  model.rs  parser.rs  writer.rs
src/sync/: diff.rs  engine.rs  mod.rs  state.rs
tests/: e2e_tests.rs  integration_tests.rs  record_fixtures.rs
tests/common/: mod.rs
tests/fixtures/: issue_1.json  issue_2.json  issue_3.json  issue_5_comments.json  issues_closed.json  issues_open.json  labels.json
